# kbo-park-factors

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
.openai/: hosting.json
app/: date-time.ts  generated-data.ts  globals.css  layout.tsx  page.tsx
data/daily-factors/: 2026-07-07.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/stadiums/: README.md  kbo-stadiums.json
data/validations/: 2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-18.json  2026-07-21.json  2026-07-22.json  2026-07-23.json
docs/superpowers/plans/: 2026-07-23-weather-humidity-implementation.md
docs/superpowers/specs/: 2026-07-23-weather-humidity-design.md
pipeline/: generate_daily_factors.py  generate_stadium_baselines.py  smoke_game_day_ui.py  validate_daily_factors.py
pipeline/kbo_park_factors/: __init__.py  artifacts.py  factors.py  official_records.py  schedule.py  stadiums.py  ui_smoke.py  validation.py  weather.py
scripts/: generate-data-registry.mjs  wrap-sites-worker.mjs
tests/: test_artifacts.py  test_factors.py  test_official_records.py  test_schedule.py  test_stadiums.py  test_ui_smoke.py  test_ui_weather_contract.py  test_ui_wind_contract.py  test_validation.py  test_weather.py
tests/fixtures/: game-day-artifact.json
worker/: index.ts
