[project]
name = "kbo-park-factors-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "pydantic>=2.7",
  "requests>=2.32"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2"
]

[tool.setuptools.packages.find]
where = ["pipeline"]

[tool.pytest.ini_options]
pythonpath = ["pipeline"]
testpaths = ["tests"]
